PICS-806: fix z-index for jump-to on IE. Also fix z-index on fieldhelp for IE

--- a/WebContent/css/forms.css
+++ b/WebContent/css/forms.css
@@ -270,11 +270,10 @@ span.jump-to ul.jump-header-list {
 	font-weight:normal;
 }
  
-span.jump-to ul.jump-header-list li a:link {
+span.jump-to ul.jump-header-list li a {
 	display:block;
 	white-space: nowrap;
 	cursor:pointer;
-	width:100%;
 	color: #464646;
 }
 
