--- a/WebContent/css/ie6.css
+++ b/WebContent/css/ie6.css
@@ -24,24 +24,31 @@ div.caoGroup {
 	padding: 0px !important;
 }
 
+/* 
+ * Form fixes
+ */
 fieldset.form h2.formLegend {width: 100%;}
+
+fieldset.form ol li { z-index: 1000; }
 
 /* 
  * required icon fix
  */
 fieldset.form ol li.required {
-	background: inherit url(../images/required.gif) no-repeat right 28px;	
+	background: url(../images/required.gif) no-repeat right 28px;
+	background-color: inherit;
 }
 
 .required-info {
-	background: inherit url(../images/required.gif) no-repeat left center;	
+	background: url(../images/required.gif) no-repeat left center;	
+	background-color: inherit;
 }
 
 /* 
  * Jump To Styles for form headers
  */
 ul.jump-header-list {
-	top:28px;
+	top:24px;
 }
 
 h2.formLegend span.jump-to {
